--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
             android:background="@drawable/grassbg"
             android:orientation="vertical">
 
-
             <LinearLayout
+                android:id="@+id/teamsView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="15dp"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -43,7 +43,7 @@
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="end"
                     android:layout_weight="1"
                     android:fontFamily="sans-serif-light"
@@ -56,12 +56,26 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginBottom="15dp"
+                    android:background="#AAAAAA" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:orientation="horizontal">
 
 
                 <LinearLayout
+                    android:id="@+id/TeamAbuttons"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -69,6 +83,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/TeamAgoal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -89,7 +104,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+                            android:text="@string/_0"
                             android:textColor="#FFFFFF"
                             android:textSize="36sp" />
                     </LinearLayout>
@@ -108,6 +123,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/TeamAfoul"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -129,7 +145,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+                            android:text="@string/_0"
                             android:textColor="#FFFFFF"
                             android:textSize="24sp" />
                     </LinearLayout>
@@ -148,6 +164,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/TeamAyellow"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -168,7 +185,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+                            android:text="@string/_0"
                             android:textColor="#FFFFFF"
                             android:textSize="24sp" />
                     </LinearLayout>
@@ -187,6 +204,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/TeamAred"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -208,7 +226,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+                            android:text="@string/_0"
                             android:textColor="#FFFFFF"
                             android:textSize="24sp" />
                     </LinearLayout>
@@ -216,24 +234,25 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="1dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <View
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
-                        android:layout_margin="24dp"
-                        android:background="#FFFFFF" />
+                        android:background="#AAAAAA" />
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/TeamBbuttons"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:id="@+id/TeamBgoal"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -245,7 +264,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+                            android:text="@string/_0"
                             android:textColor="#FFFFFF"
                             android:textSize="36sp" />
 
@@ -273,6 +292,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/TeamBfoul"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -284,7 +304,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+                            android:text="@string/_0"
                             android:textColor="#FFFFFF"
                             android:textSize="24sp" />
 
@@ -312,6 +332,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/TeamByellow"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -323,7 +344,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+
                             android:textColor="#FFFFFF"
                             android:textSize="24sp" />
 
@@ -350,6 +371,7 @@
                     </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/TeamBred"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -361,7 +383,7 @@
                             android:layout_weight="1"
                             android:fontFamily="sans-serif-light"
                             android:gravity="center"
-                            android:text="0"
+
                             android:textColor="#FFFFFF"
                             android:textSize="24sp" />
 
